Update nodejs version

--- a/template.yaml
+++ b/template.yaml
@@ -13,73 +13,73 @@ Parameters:
     Default: 3008
     Description: Memory size to be used for your Lambda (Note that this setting will increase also the CPU power and price per second.)
     AllowedValues:
-    - 128
-    - 192
-    - 256
-    - 320
-    - 384
-    - 448
-    - 512
-    - 576
-    - 640
-    - 704
-    - 768
-    - 832
-    - 896
-    - 960
-    - 1024
-    - 1088
-    - 1152
-    - 1216
-    - 1280
-    - 1344
-    - 1408
-    - 1472
-    - 1536
-    - 1600
-    - 1664
-    - 1728
-    - 1792
-    - 1856
-    - 1920
-    - 1984
-    - 2048
-    - 2112
-    - 2176
-    - 2240
-    - 2304
-    - 2368
-    - 2432
-    - 2496
-    - 2560
-    - 2624
-    - 2688
-    - 2752
-    - 2816
-    - 2880
-    - 2944
-    - 3008
+      - 128
+      - 192
+      - 256
+      - 320
+      - 384
+      - 448
+      - 512
+      - 576
+      - 640
+      - 704
+      - 768
+      - 832
+      - 896
+      - 960
+      - 1024
+      - 1088
+      - 1152
+      - 1216
+      - 1280
+      - 1344
+      - 1408
+      - 1472
+      - 1536
+      - 1600
+      - 1664
+      - 1728
+      - 1792
+      - 1856
+      - 1920
+      - 1984
+      - 2048
+      - 2112
+      - 2176
+      - 2240
+      - 2304
+      - 2368
+      - 2432
+      - 2496
+      - 2560
+      - 2624
+      - 2688
+      - 2752
+      - 2816
+      - 2880
+      - 2944
+      - 3008
 Resources:
   ResizeFunction:
     Type: AWS::Serverless::Function
     Properties:
       Description: Image Resizing Lambda
       Handler: index.handler
-      Runtime: nodejs14.x
+      Runtime: nodejs20.x
       Timeout: 60
       CodeUri: dist/bundle.zip
       MemorySize: !Ref MemorySize
       Layers:
         - !Ref ImageMagickLayer
       Policies:
-      - S3ReadPolicy:
-          BucketName:
-            Ref: ImageBucket
+        - S3ReadPolicy:
+            BucketName:
+              Ref: ImageBucket
       Events:
         AuthorizerApiRoot:
           Properties:
             Method: GET
-            Path: '/{proxy+}'
+            Path: "/{proxy+}"
             RestApiId: !Ref Api
           Type: Api
       Environment:
@@ -94,9 +94,9 @@ Resources:
       DefinitionBody:
         swagger: "2.0"
         schemes:
-        - "https"
+          - "https"
         paths:
-          '/{proxy+}':
+          "/{proxy+}":
             get:
               responses: {}
               x-amazon-apigateway-integration:
@@ -105,4 +105,4 @@ Resources:
                 httpMethod: "POST"
                 type: aws_proxy
         x-amazon-apigateway-binary-media-types:
-        - "*/*"
+          - "*/*"
